force-app/main/default/objects/Emplyoee__c/Emplyoee__c.object-meta.xml
<CustomObject>
    <label>Employee</label>
    <nameField>
        <label>CandidateName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>