force-app/main/default/objects/Emplyoee__c/listViews/EmployeeQueue_Emplyoee.listView-meta.xml
<ListView>
    <fullName>EmployeeQueue_Emplyoee</fullName>
    <filterScope>Queue</filterScope>
    <label>Employee Queue</label>
    <queue>EmployeeQueue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>